# api.roondal.co.kr

./: .env.example  .gitignore  alarm_sender.php  alarm_sender_py.py  common.inc.php  crontab_alarm_sender.txt  house_alarm.php  image.php  index.php  mattermost_channel_list.txt  nginx_fastapi.conf  pyproject.toml  roondal-api.service  salary.php
.cursor/rules/: api-roondal-co-kr-child.mdc
Controllers/: BaseController.php  Category.php  Controller_example.txt  Get_ip.php  Index.php  Reserve.php
Models/: ReserveModel.php
Views/: index.php
Views/mattermost/: reserve_complete.php
Views/reserve/: index.php  reserve.php
app/: config.py  database.py  main.py
app/models/: alarm.py
app/routers/: clear.py  get_ip.py  index.py  oauth.py  reserve.py
app/schemas/: alarm.py  mattermost.py
app/services/: alarm_content.py  google_calendar.py  google_oauth.py  mattermost.py  perplexity.py
app/utils/: datetime_helpers.py  json_extractor.py
apps/css/: index.css
apps/html/: index.html  test.html
apps/js/: index.js
common_class/: connection.php  functions.php  whitelist.php
docs/: README.md
docs/features/: 01_alarm_reserve.md  02_alarm_sender.md  03_channel_clear.md  04_google_calendar.md  05_google_oauth.md
